--- a/src/blocks/popup/popup.css
+++ b/src/blocks/popup/popup.css
@@ -20,4 +20,5 @@
     left: 0px;
     background-color: rgba(0, 0, 0, 0.5);
     transition: .2s;
+    z-index: 6;
 }
